--- a/app/views/account/settings/_subscription_panel.html.erb
+++ b/app/views/account/settings/_subscription_panel.html.erb
@@ -14,13 +14,13 @@
       <%= button_to "Upgrade to #{Plan.paid.name} fo $#{ Plan.paid.price }/month", account_subscription_path, class: "btn settings-subscription__button txt-medium", form: { data: { turbo: false } } %>
 
       <p>Cancel any time, no contracts, take your data with you whenever.</p>
-      <p class="settings-subscription__footer txt-small margin-none-block-end">Right now you're on the <strong><%= Current.account.plan.name %></strong> plan which includes <%= Plan.free.card_limit %> cards, unlimitted users, and <%= number_to_human_size(Plan.free.formatted_storage_limit) %> of storage.</p>
+      <p class="settings-subscription__footer txt-small margin-none-block-end">Right now you're on the <strong><%= Current.account.plan.name %></strong> plan which includes <%= Plan.free.card_limit %> cards, unlimited users, and <%= number_to_human_size(Plan.free.formatted_storage_limit) %> of storage.</p>
     <% else %>
       <h3 class="margin-block-start margin-block-end-half txt-x-large font-weight-black">Thank you for buying Fizzy</h3>
 
       <% if Current.account.subscription %>
         <%= render "account/settings/subscription", subscription: Current.account.subscription %>
-        <p class="settings-subscription__footer txt-small">Right now you're on the <strong><%= Current.account.plan.name %></strong> plan which includes unlimitted cards, unlimitted users, and <%= number_to_human_size(Plan.paid.formatted_storage_limit) %> of storage.</p>
+        <p class="settings-subscription__footer txt-small">Right now you're on the <strong><%= Current.account.plan.name %></strong> plan which includes unlimited cards, unlimited users, and <%= number_to_human_size(Plan.paid.formatted_storage_limit) %> of storage.</p>
       <% end %>
     <% end %>
 
