--- a/app/views/account/settings/_subscription_panel.html.erb
+++ b/app/views/account/settings/_subscription_panel.html.erb
@@ -4,12 +4,12 @@
 
     <% if Current.account.plan.free? %>
       <% if Current.account.exceeding_card_limit? %>
-        <h3 class="margin-block-start margin-block-end-half txt-large font-weight-black">You've used up your <u><%= Plan.free.card_limit %></u> free cards</h3>
+        <h3 class="margin-block-start margin-block-end-half txt-large font-weight-black">You’ve used up your <u><%= Plan.free.card_limit %></u> free cards</h3>
       <% else %>
-        <h3 class="margin-block-start margin-block-end-half txt-large font-weight-black">You've used <u><%= Current.account.cards_count %></u> free cards out of <%= Plan.free.card_limit %></h3>
+        <h3 class="margin-block-start margin-block-end-half txt-large font-weight-black">You’ve used <u><%= Current.account.cards_count %></u> free cards out of <%= Plan.free.card_limit %></h3>
       <% end %>
 
-      <p class="margin-none-block-start">If you’d like to keep using Fizzy past <%= Plan.free.card_limit %> cards, it’s only <strong>$<%= Plan.paid.price %>/month</strong> for <strong>unlimited cards</strong> + <strong>unlimited users</strong>. You'll also get <strong><%= number_to_human_size(Plan.paid.formatted_storage_limit) %></strong> of storage. </p>
+      <p class="margin-none-block-start">If you’d like to keep using Fizzy past <%= Plan.free.card_limit %> cards, it’s only <strong>$<%= Plan.paid.price %>/month</strong> for <strong>unlimited cards</strong> + <strong>unlimited users</strong>. You’ll also get <strong><%= number_to_human_size(Plan.paid.formatted_storage_limit) %></strong> of storage. </p>
 
       <%= button_to "Upgrade to #{Plan.paid.name} for $#{ Plan.paid.price }/month", account_subscription_path, class: "btn settings-subscription__button txt-medium", form: { data: { turbo: false } } %>
 
